Upgrade dependency `Siren` to v3.1; Support Xcode 9 & Swift 4

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,8 +8,8 @@ target 'DLUpdater_Example' do
     target 'DLUpdater_Tests' do
         inherit! :search_paths
         
-        pod 'Quick', '~> 1.0.0'
-        pod 'Nimble', '~> 5.1.1'
+        pod 'Quick'
+        pod 'Nimble'
         pod 'FBSnapshotTestCase'
         pod 'Nimble-Snapshots'
     end
