Supports for Swift 4.2 & pod update dependency 'Siren' v3.5.1

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,6 +11,6 @@ target 'DLUpdater_Example' do
         pod 'Quick'
         pod 'Nimble'
         pod 'FBSnapshotTestCase'
-        pod 'Nimble-Snapshots'
+#        pod 'Nimble-Snapshots'
     end
 end
