build: update `podspec`; support for Swift 5; upgrade pod dependency 'Siren' v5.1.0

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,7 +10,7 @@ target 'DLUpdater_Example' do
         
         pod 'Quick'
         pod 'Nimble'
-        pod 'FBSnapshotTestCase'
+#        pod 'FBSnapshotTestCase'
 #        pod 'Nimble-Snapshots'
     end
 end
